--- a/style.css
+++ b/style.css
@@ -88,9 +88,53 @@
     transition: 0.25s;
 }
 
+.header a:hover {
+  color: #FF3D73;
+
+}
 .main-content {
     display: relative;
     
+}
+
+.text-blur-out {
+	-webkit-animation: text-blur-out 1s ease-in 1.5s reverse both;
+	        animation: text-blur-out 1s ease-in 1.5s reverse both;
+}
+/**
+ * ----------------------------------------
+ * animation text-blur-out
+ * ----------------------------------------
+ */
+ @-webkit-keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
+}
+@keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
+}
+@keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
 }
 
 .article {
@@ -108,16 +152,6 @@
     color: #384955;
 }
 /*.aside {
-    height: 42px;
-    width: 276px;
-    position: relative;
-    background-color: #384955;
-    margin: 0 555px;
-    top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
     
 }*/
 
@@ -348,13 +382,6 @@ small {
     background-color: transparent;
     cursor: pointer;
 }
-.heading{
-    background-color: transparent;
-    color: #DFF1FF;
-}
-.heading a:hover{
-    color: #FFC2BC;
-}
 
 .heading-2 {
   font-size: 30pt;
@@ -379,6 +406,13 @@ small {
     position: relative;
 }
 
+.gallery2 {
+  background-image: url(/ca-line.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 532px;
+}
 .kolase {
     display: flex;
     justify-content: center;
@@ -396,9 +430,3 @@ small {
 }
 
 /* css for last*/
-
-
-
-.head3 {
-   
-}
