--- a/style.css
+++ b/style.css
@@ -413,6 +413,16 @@ small {
   width: 100%;
   height: 532px;
 }
+
+.line {
+  background-image: url(/line.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 532px;
+  position: absolute;
+  top: 29rem;
+}
 .kolase {
     display: flex;
     justify-content: center;
